; ModuleID = '/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-data.c_do_delete_all_friend_requests.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-data.c_do_delete_all_friend_requests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LEV_FR_DELALL_REQ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_delete_all_friend_requests(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @conv_uid(i32 %4)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @LEV_FR_DELALL_REQ, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @alloc_log_event(i32 %9, i32 8, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @get_user(i32 %12)
  %14 = call i32 @delete_all_friend_requests(i32 %13)
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %8, %7
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i64 @conv_uid(i32) #1

declare dso_local i32 @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @delete_all_friend_requests(i32) #1

declare dso_local i32 @get_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
